--- a/1410.1540/diffprotocol_submit.tex
+++ b/1410.1540/diffprotocol_submit.tex
@@ -448,11 +448,11 @@ The ``cost'' of purifying a given mixed state is apparently negative! What this 
 For readers unfamiliar with state merging, another simple (in fact, trivial) example may again be helpful. Suppose that Alice and Bob share the state $\ket{\psi}_{AB} = \smfrac{1}{\sqrt{2}}( \ket{00}_{AB} + \ket{11}_{AB})$ and that Alice wishes to merge $A$ to Bob, who holds $B$. The objective is to prepare a state in Bob's laboratory identical to $\ket{\psi}_{AB}$. The key point in this case, as compared to the merging examples in Sec.~\ref{explnongeodesic}, is the absence of a third system $R$. In general, the Alice-Bob merging procedure is required to maintain all the correlations with outside systems like $R$. In the absence of such systems, there are no correlations to preserve. Therefore, a perfectly good merging protocol is for Bob to prepare the state $\ket{\psi'} = \smfrac{1}{\sqrt{2}}(\ket{00}_{A'B'} + \ket{11}_{A'B'})$ in his own laboratory, without any help from Alice.  The initial state $\ket{\psi}_{AB}$ is left untouched so at the end of the merging protocol Alice and Bob share 1 Bell pair. This is exactly as it should be: for $\ket{\psi}_{AB}$, we have $S(A|B)=-1$ so instead of consuming a Bell pair, Alice and Bob return one. In more realistic situations, the state initially shared between Alice and Bob will be mixed. In that case, negative cost merging amounts to entanglement distillation: the extraction of good Bell pairs from noisy entanglement using only local operations and classical communication~\cite{bennett1996mixed,devetak2005distillation}.
 
 Can \eqref{minusgeodlength} be interpreted as a differential entropy? Above we switched the roles of $I(x)$ and $I(x)^c$. If we substitute the complementary intervals in the definition (\ref{main}), we obtain:
-\begin{equation}
-\int \Big(S\big(I(x)^c\big) - S\big(I(x)^c \cap I(x-dx)^c\big) \Big) =
+\begin{multline}
+\int \Big(S\big(I(x)^c\big) - S\big(I(x)^c \cap I(x-dx)^c\big) \Big) = \\
 \int \Big(S\big(I(x)\big) - S\big(I(x) \cup I(x-dx)\big) \Big) \equiv \sdiff
 \label{main2}
-\end{equation}
+\end{multline}
 We take this to be the definition of the differential entropy under reversal of orientation \cite{roblast, robproof, lampros}. This extension is sensible and necessary. Recall that the intervals $I(x)$ are defined by the requirement that the geodesics subtending them are tangent to the bulk curve. But this definition is ambiguous: if a family $I(x)$ satisfies it, so does $I(x)^c$. This ambiguity is fixed by a choice of orientation on the curve. Augmenting the definition by (\ref{main2}) makes it covariant under orientation reversal, whose boundary counterpart is to take the complement of each set $I(x)$.
 
 Does this amendment make the definition ambiguous? Yes, but only up to a sign. Given a curve $R = R(\tilde{x})$ that subtends a boundary interval $I$, select a family of intervals $I(x)$. We can now compute the length of the curve using formula (\ref{main}) or using formula (\ref{main2}). One computes the number of Bell pairs required by Bob to learn the state on $I$ starting from nothing while the other computes the number of Bell pairs that can be extracted as Bob purifies his initial state on $I^c$. They always give opposite answers, because
@@ -626,14 +626,18 @@ The Hilbert space purifying the $\psi$ mixed state is obviously $\mathcal{H}^A_{
 Using Uhlmann's theorem~\cite{uhlmann1976transition} and standard inequalities relating the trace distance and fidelity~\cite{fuchs}, we conclude that there exists an an isometry taking $\mathcal{H}^A_{ [\ell(x+1),r(x)]}$ to $\mathcal{H}^A_{[L,r(x)]}  \otimes  \mathcal{H}^B_{[\ell(x+1),r(x)]}$ that maps $\ket{\psi}$ to a state $f_1(\epsilon_{k,x})$-close to $\sigma^{(k,x)}$ where $f_1(\epsilon_{k,x})$ vanishes with $\epsilon_{k,x}$.
 
 But then
-\begin{align}
-&\, S \left( [\ell(x), \ell(x+1) ) \big| [\ell(x+1),r(x)] \right)_\psi \nonumber \\
-&\leq
-S \left( [\ell(x), \ell(x+1) )^B \big| [L,r(x)]^A  \cup [\ell(x+1),r(x)]^B \right)_{\sigma_{k,x}}
-	+ f(\epsilon_{k,x}) \log \dim \mathcal{H}_{[\ell(x),\ell(x+1))^B} \nonumber \\
-&\leq
-S \left( [\ell(x), \ell(x+1) )^B \big| [\ell(x+1),r(x)]^B \right)_{\sigma_{k,x}} + f(\epsilon_{k,x}) \log \dim \mathcal{H}_{[\ell(x),\ell(x+1))^B}. \label{isometry-ineq}
-\end{align}
+\begin{equation}
+\begin{aligned}
+{} & S \left( [\ell(x), \ell(x+1) ) \big| [\ell(x+1),r(x)] \right)_\psi
+\\
+&\qquad \leq S \left( [\ell(x), \ell(x+1) )^B \big| [L,r(x)]^A  \cup [\ell(x+1),r(x)]^B \right)_{\sigma_{k,x}}\\
+& \qquad\qquad + f(\epsilon_{k,x}) \log \dim \mathcal{H}_{[\ell(x),\ell(x+1))^B}  \\
+&\qquad \leq
+S \left( [\ell(x), \ell(x+1) )^B \big| [\ell(x+1),r(x)]^B \right)_{\sigma_{k,x}} +\\ 
+& \qquad\qquad f(\epsilon_{k,x}) \log \dim \mathcal{H}_{[\ell(x),\ell(x+1))^B}. \label{isometry-ineq}
+\end{aligned}
+\end{equation}
+
 The function $f(\epsilon_{k,x})$ also vanishes with $\epsilon_{k,x}$.
 The first inequality holds thanks to the existence of the isometry relating the two systems being conditioned upon and the Alicki-Fannes conditional entropy continuity inequality~\cite{alicki2004continuity}, while the second inequality is an application of strong subadditivity.
 
@@ -684,9 +688,10 @@ where $\lamm(\sigma)$ is the largest eigenvalue of $\sigma$. For the smooth min-
 If the state $\rho$ were an equal weight mixture of $M$ pure states, it would immediately follow that both $\Hmax^\epsilon$ and $\Hmin^\epsilon$ are within $\epsilon$ of the von Neumann entropy $\log(M)$. In this case the single-shot cost is the same as the asymptotic cost (as it should be). What we now show is that, to leading order in the central charge $c$, the smooth min- and max- entropies for an interval in a CFT are also given by the interval's von Neumann entropy. Hence for CFT intervals (with some care taken about the errors) we find that the single-shot cost approximately reproduces the asymptotic cost.
 
 To compute these smooth entropies, we use a formula found by Calabrese and Lefevre for the eigenvalue distribution of an interval's reduced density operator in either a vacuum or thermal state of a 1+1 dimensional CFT~\cite{calabrese-eigs}:
-\beq
-P(\lambda) = \sum_i \delta(\lambda - \lambda_i) = \delta(\lambda - \lamm) + \frac{b\, \Theta(\lamm - \lambda)}{\lambda \sqrt{b \log(\lamm/\lambda)}} I_1(2 \sqrt{b\log(\lamm/\lambda)})\,,
-\eeq
+\begin{multline}
+P(\lambda) = \sum_i \delta(\lambda - \lambda_i) = \delta(\lambda - \lamm) + \\ 
+\frac{b\, \Theta(\lamm - \lambda)}{\lambda \sqrt{b \log(\lamm/\lambda)}} I_1(2 \sqrt{b\log(\lamm/\lambda)})\,,
+\end{multline}
 where $b = \Hmin(I) = -\log(\lambda_{\max})$ and $I_1$ is a modified Bessel function of the first kind. This formula is derived starting from the fact that the R\'enyi entropies of an interval $I$, $S_\alpha(I) = \frac{1}{1-\alpha}\log(\tr(\rho_I))$, are given by
 \beq \label{cft-renyi}
 S_\alpha(I) = \frac{1}{2}\left(1 +\frac{1}{\alpha}\right) S(I),
@@ -764,9 +769,10 @@ The smooth max entropy is then the logarithm of the rank of the truncated state 
 \Hmax^{\epsilon'} = \log\left(\int_0^{y_{\max}} dy\, \tilde{P}(y)\right) \approx \log\left(\int^{y_{\max}} dy\, e^y \right) \approx y_{\max} = S + O(\delta y(\epsilon')).
 \eeq
 Similarly, the smooth entropy is the logarithm of the largest remaining eigenvalue after truncating the largest eigenvalues, so
-\beq
-\Hmin^{\epsilon'} = -\log(\lambda(y_{\min})) = - \log(\lamm) + \frac{y_{\min}^2}{2S} = \frac{S}{2} + \frac{(S - \delta y)^2}{2 S} \approx S - O(\delta y(\epsilon')).
-\eeq
+\begin{multline}
+\Hmin^{\epsilon'} = -\log(\lambda(y_{\min})) = - \log(\lamm) + \frac{y_{\min}^2}{2S} = \\
+\frac{S}{2} + \frac{(S - \delta y)^2}{2 S} \approx S - O(\delta y(\epsilon')).
+\end{multline}
 Pulling out a factor of $S$, the smooth entropies take the claimed form \eqref{eqn:smooths}.
 
 We now have the tools to bound the parameters required to achieve a cumulative error of $\delta$ in an $N$-step constrained merging protocol. Each step should contribute an error of at most $\delta/N$, which means that $\epsilon' = \text{poly}(\delta/N)$ in \eqref{eqn:smooths} thanks to \eqref{ub-single-shot}. The error term in \eqref{eqn:smooths} is then
@@ -965,28 +971,29 @@ Consider a lattice of $N$ sites at $x_i=i L/N$ for some infrared cut-off $L$. Ou
 &&f_R(x,x_i)=2\pi \frac{R(x_i)^2-(x-x_i)^2}{2R(x_i)}.
 \eea
 The Markov operator $\sigma$ is defined in (\ref{rho_global}) to be
-\bea
-&&-\log\sigma=\sum_i\lb \log\rho_{J(x_i)}-\log\rho_{J(x_i)\cap J(x_{i+1})}\rb\nn\\
-&&=\sum_i\lb\int_{x_i-R(x_i)}^{x_i+R(x_i)} dx\:f_R(x,x_i)T_{00}(x)-\int_{x_i-(R(x_i+\delta)-\delta)}^{x_i+R(x_i)}dx\:f_{R(x_i,x_{i+1})}(x,x_{i,i+1})T_{00}(x)\rb+c,\nn
-\eea
+\begin{align}
+-\log\sigma &=\sum_i\lb \log\rho_{J(x_i)}-\log\rho_{J(x_i)\cap J(x_{i+1})}\rb\nn\\
+&=\sum_i\biggl(\int_{x_i-R(x_i)}^{x_i+R(x_i)} dx\:f_R(x,x_i)T_{00}(x)-\nn\\
+&\qquad \int_{x_i-(R(x_i+\delta)-\delta)}^{x_i+R(x_i)}dx\:f_{R(x_i,x_{i+1})}(x,x_{i,i+1})T_{00}(x)\biggr)+c,\nn
+\end{align}
 where $\delta=L/N$, $R_{i,i+1}=(R(x_i)+R(x_i+\delta)-\delta)/2$ and $x_{i,i+1}=x_i+\delta/2+(R(x_i)-R(x_i+\delta))/2$.
 
 Expanding to the first order in $\delta$ gives
-\bea
--\log\sigma&&=\sum_i\int_{x_i-R(x_i)}^{x_i-(R(x_i+\delta)-\delta)} dx\:f_R(x,x_i)T_{00}(x)\nn\\
-&&+\sum_i\int_{x_i-(R(x_i+\delta)-\delta)}^{x_i+R(x_i)}dx\:\lb f_R(x,x_i)-f_{R(x,x_i)}(x,x_{i,i+1})\rb T_{00}(x)+c\nn\\
-&&=\sum_i\frac{\pi\delta}{2}\int_{x_i-(R(x_i+\delta)-\delta)}^{x_i+R(x_i)} dx\:\lb1-\frac{x-x_i}{R(x_i)}\rb^2(1-R'(x_i))\: T_{00}(x)+c.
-\eea
+\begin{align}
+-\log\sigma&=\sum_i\int_{x_i-R(x_i)}^{x_i-(R(x_i+\delta)-\delta)} dx\:f_R(x,x_i)T_{00}(x)\nn\\
+&+\sum_i\int_{x_i-(R(x_i+\delta)-\delta)}^{x_i+R(x_i)}dx\:\lb f_R(x,x_i)-f_{R(x,x_i)}(x,x_{i,i+1})\rb T_{00}(x)+c\nn\\
+&=\sum_i\frac{\pi\delta}{2}\int_{x_i-(R(x_i+\delta)-\delta)}^{x_i+R(x_i)} dx\:\lb1-\frac{x-x_i}{R(x_i)}\rb^2(1-R'(x_i))\: T_{00}(x)+c.
+\end{align}
 Here, we have used the identities
-\bea
-&&\partial_Rf_R(x,x_i)=\pi\lb 1+\frac{(x-x_i)^2}{R^2}\rb,\nn\\
-&&\partial_{x_i}f_R(x,x_i)=2\pi\frac{(x-x_i)}{R}.
-\eea
+\begin{align}
+\partial_Rf_R(x,x_i)& =\pi\lb 1+\frac{(x-x_i)^2}{R^2}\rb,\nn\\
+\partial_{x_i}f_R(x,x_i)&=2\pi\frac{(x-x_i)}{R}.
+\end{align}
 In the limit $\delta\to 0$ the sum over intervals becomes an integral over $x_i$, and the expression for the Markov operator simplifies to
-\bea
--\log\sigma&&=\frac{\pi}{2}\int_{0}^{L}dx_i\int_{x_i-R}^{x_i+R}dx\lb 1-\frac{x-x_i}{R(x_i)}\rb^2(1-R'(x_i))\: T_{00}(x)+c\nn\\
-&&=\int_0^L dx\: \beta(x)T_{00}(x)+c,
-\eea
+\begin{align}
+-\log\sigma&=\frac{\pi}{2}\int_{0}^{L}dx_i\int_{x_i-R}^{x_i+R}dx\lb 1-\frac{x-x_i}{R(x_i)}\rb^2(1-R'(x_i))\: T_{00}(x)+c\nn\\
+&=\int_0^L dx\: \beta(x)T_{00}(x)+c,
+\end{align}
 where $\beta(x)=\int_{x-R}^{x+R}dx_i\lb 1-\frac{x-x_i}{R(x_i)}\rb^2(1-R'(x_i))$.
 We find $\sigma$ to be proportional to a thermal density matrix with local temperature $\beta(x)$. For intervals of constant size $R(x_i)=R$  the Markov operator is the thermal state at temperature $\frac{3}{4\pi R}$:
 \bea
