--- a/1211.6913/BHEnQEC-Final2-1.tex
+++ b/1211.6913/BHEnQEC-Final2-1.tex
@@ -12,6 +12,7 @@
 \usepackage{setspace}
 \usepackage[all]{xy}
 
+\usepackage{enumerate}   
 
 \def\spc{\hspace{.5pt}}
 \usepackage{amssymb, amsmath, amsopn, amsthm}
@@ -27,27 +28,68 @@
 \def\be{\begin{equation}}
 \def\ee{\end{equation}}
 
-\begin{document}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
-\setlength{\textwidth}{16.2cm}
-\setlength{\textheight}{21.8cm}
-\addtolength{\oddsidemargin}{0mm}
-\addtolength{\topmargin}{-10mm}
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
+\begin{document}
 
 \date{October 2012}
 %\preprint{UCD-HEP-???}
-\title{\LARGE\bf  Black Hole Entanglement
-  \\[-7mm] { and} \\[2mm]
-Quantum Error Correction}
+\title{\Large Black Hole Entanglement\\
+and Quantum Error Correction}
 
 
-\institution{UvA}{\centerline{${}^{1}$Institute for Theoretical Physics, University of Amsterdam, Amsterdam, The Netherlands}}
+\institution{UvA}{\centerline{${}^{1}$Institute for Theoretical Physics, University of Amsterdam}}
 
-\institution{PU}{\centerline{${}^{2}$Department of Physics, Princeton University, Princeton, NJ 08544, USA}}
+\institution{PU}{\centerline{${}^{2}$Department of Physics, Princeton University}}
 
-\institution{PCTS}{\centerline{${}^{2}$Princeton Center for Theoretical Science,  Princeton, NJ 08544, USA }}
+\institution{PCTS}{\centerline{${}^{2}$Princeton Center for Theoretical Science}}
 
-\authors{Erik Verlinde\worksat{\UvA}\footnote{e-mail: {\tt E.P.Verlinde@uva.nl}} and Herman Verlinde\worksat{\PU,\PCTS}\footnote{e-mail: {\tt verlinde@princeton.edu}}}
+\authors{Erik Verlinde\worksat{\large \UvA}\footnote{e-mail: {\tt E.P.Verlinde@uva.nl}} and Herman Verlinde\worksat{\PU,\PCTS}\footnote{e-mail: {\tt verlinde@princeton.edu}}}
 
 
 \def\spc{\hspace{.5pt}}
@@ -184,15 +226,10 @@ Our general framework clarifies the black hole final state proposal, and allows 
 \def\iii{i}
 \def\jjj{j}
 \def\bh{{\mbox{\fontsize{7pt}{.7pt}{$BH$}}}}%\mbox{\tiny \it BH}}}}
-\enlargethispage{\baselineskip}
 
-\setcounter{tocdepth}{2}
 \tableofcontents
 
 \newpage
-\addtolength{\baselineskip}{.25mm}
-\addtolength{\parskip}{.3mm}
-\renewcommand\Large{\fontsize{15.5}{16}\selectfont}
 
 \section{Introduction}
 
@@ -201,14 +238,17 @@ in theoretical physics \cite{hawking,unruh}.  Logical consistency of quantum bla
 \cite{bekenstein,hawking} imposes tight constraints on the microscopic theory. The discovery of the holographic principle  
 \cite{hoofthologram}\cite{susskindhologram} and its realization in string theory \cite{maldacena} suggests that  black holes satisfy all rules of 
 quantum mechanics.   The principle of black hole complementarity \cite{susskindcompl} is designed to reconcile the seemingly 
-conflicting observations of  an outside observer and an infalling observer. It postulates that\\[2.5mm]
-${}$~~\parbox{15.5cm}{\addtolength{\baselineskip}{1mm}
-i)\;\; black hole formation and evaporation are described via unitary quantum evolution 
-ii)\; the region outside the stretched horizon is well described by QFT in curved space
-iii) to an outside observer, the stretched horizon behaves like a quantum mechanical  ${}$~~~~${}$\,\spc membrane
-with microscopic entropy bounded by the Bekenstein-Hawking formula iv) an infalling observer can cross the event horizon without encountering any trouble.}
+conflicting observations of  an outside observer and an infalling observer. It postulates that
+\begin{enumerate}[(i)]
+\item Black hole formation and evaporation are described via unitary quantum evolution.
 
-\medskip
+\item The region outside the stretched horizon is well described by QFT in curved space.
+
+\item To an outside observer, the stretched horizon behaves like a quantum mechanical membrane
+with microscopic entropy bounded by the Bekenstein-Hawking formula.
+
+\item An infalling observer can cross the event horizon without encountering any trouble.
+\end{enumerate}
 
 In a recent paper \cite{amps}, Almheiri et al formulated an interesting counter-argument against the simultaneous validity of these four assumptions. 
 The reasoning of \cite{amps}, referred to as the ``firewall argument",  goes as follows. At late times the quantum state of the black hole is maximally entangled with the early radiation. Because entanglement can not be shared, and the information eventually has to come out, the late radiation can not be entangled with the black hole. Since the latter property is believed to be a necessary requirement for the quantum state to look like the local Minkowski vacuum near the horizon, one seems forced to conclude that the infalling observer can not pass through the horizon without experiencing dramatic events. This provocative conclusion has led to a lively debate \cite{followup}\cite{susskind-entanglement}.
@@ -275,7 +315,7 @@ Suppose that we have measured its mass $M$ with some high accuracy.  For now, we
 other macroscopic properties such as angular momentum and charge.
 We associate a Hilbert space ${\cal H}_{{}_{\! M}}$ to the black hole with mass $M$, whose states
 \be
-\bigll|\,\iii\,\bigrr\rangle\in\; {\cal H}_M
+\bigl|\,\iii\,\bigr\rangle\in\; {\cal H}_M
 \ee
 are indistinguishable from a macroscopic perspective. Each state $\bigl| \, i \, \ra$ describes the interior of a black hole, with microscopic properties that are hidden from the outside observer by the stretched horizon. The number of black holes micro-states is determined by the Bekenstein Hawking entropy\footnote{We assume here that we have performed a suitable coarse graining, since strictly speaking the number of quantum states of a black hole should be represented in terms a density of states. This technical point will not be important for our subsequent discussion.} 
 \be
@@ -1197,8 +1237,6 @@ The operator $\Error$ will be called the `error operator'.
 Hence to have an accurate recovery procedure, we must choose the code subspace small enough so that this error is negligibly small.
 Thus we again encounter the condition that ${N_{\rm code}} \ll N_\nom$.
 
-\newpage
-
 \subsection{Approaching the Firewall}
 
 The firewall argument  concerns the limit in  which the black hole density matrix  approximates the maximally mixed state (\ref{maxmix}). 
@@ -1352,7 +1390,6 @@ a semi-classical geometry with a smooth horizon. Since a maximally mixed black h
 maximal entropy, we have shown that it represents an incoherent sum of different (in the sense that they are incompatible with each other) semi-classical states. 
 Usually this means that the semi-classical states are the states that we measure.
 
-\newpage
 
 \section{Summary}
 
@@ -1367,21 +1404,21 @@ decoupled, we are allowed to treat the states $\bigl|\Phi_i\bigr\rangle$ as stat
 
 
  We would like to investigate with which part of the wave function the radiation state
-$\bigl| \,\nom\, \bigr\rangle$ is entangled, the black hole state or the early radiation state. In \cite{amps} it is argued that, since for an old black hole 
+$| \nom \rangle$ is entangled, the black hole state or the early radiation state. In \cite{amps} it is argued that, since for an old black hole 
 the Hilbert space of the early radiation is so much larger than that of the black hole itself,  the radiation state must be maximally entangled with the environment state $\bigl|\Phi_i\bigr\rangle $ and has no entanglement with the black hole state $\bigl|\,j\,\bigr\rangle $.\footnote{ In section 2.4 we already established that this is not entirely true, even in the maximally entangled situation. The radiation state is always shares entanglement with the black hole. } This appears to exclude the existence of a smooth horizon. The question that we will first try to answer is:
 \medskip
 
 \noindent 
-${}$~\parbox{16cm}{\it Under which conditions can an observer who has only access to the internal black hole states $\bigl|\, j\, \bigr\rangle$ accurately determine in which state $\bigl|\, \nom\, \bigr\rangle_b$ the late radiation has been emitted?}
+{\it Under which conditions can an observer who has only access to the internal black hole states $\bigl|\, j\, \bigr\rangle$ accurately determine in which state $| \nom \rangle_b$ the late radiation has been emitted?}
 
 \smallskip
 
 \noindent
-To focus the discussion, let us assume that  an outside observer has detected the radiation  in a particular state $\bigl|\, \nom\,\bigr\rangle$.  Thus instead of the full quantum 
+To focus the discussion, let us assume that  an outside observer has detected the radiation  in a particular state $|\, \nom\rangle$.  Thus instead of the full quantum 
 state $\bigl|\, \Psi\,\bigr\rangle$ we now look at
 \be
 \label{newstatet}
-\bigl|\!\nspc\spc\bigl|\nom \,\bigr\rangle\!\!\bigr\rangle = {1\over \sqrt{N_\nom}}\sum_{i, j} C^{\,i}_{\nom, j} \,\bigl| \,j\,\bigr \rangle \,\bigl| \,\nom\,\bigr \rangle\, \bigl| \,\Phi_i\bigr \rangle,
+\bigl|\!\nspc\spc\bigl|\nom \bigr\rangle\!\!\bigr\rangle = {1\over \sqrt{N_\nom}}\sum_{i, j} C^{\,i}_{\nom, j} \,\bigl| \,j\,\bigr \rangle \,\bigl| \,\nom\,\bigr \rangle\, \bigl| \,\Phi_i\bigr \rangle,
 \ee
 where we renormalized the state so that its norm is equal to one. 
 Is there a measurement that acts on the states $\bigl|\,j\,\bigr\rangle $ whose outcome is going to tell us about the quantum numbers $\nom$ of the late radiation?
@@ -1390,7 +1427,7 @@ The key point on which our paper is based is that the coefficients $C^{\,i}_{\no
 between black hole states, as a result of emitting the radiation in state $\bigl|\nom\ra$. Hence the $C^{\,i}_{\nom, j}$ are determined by the microphysics, and
 represent the matrix elements of particular operators $\cC_\nom$, that {\it act on the interior part of the black hole Hilbert space}. We assume that the $C^{\,i}_{\nom, j}$ are all statistically independent random matrices.
 Now pick some arbitrary state $\bigl|\spc \mom\spc \ra$, with the same energy as $\bigl|\spc \nom \spc \ra$, and consider
- the operator $\Pi_{\mom} = \frac{1}{\pp_\mom} :\!\! \cC_\mom \mathbb{1}_{\rm code} \cC^\dag_\mom\! :$ with matrix elements
+ the operator $\Pi_{\mom} = \frac{1}{\pp_\mom} :\cC_\mom \mathbb{1}_{\rm code} \cC^\dag_\mom  :$ with matrix elements
 \be
 \label{pimats}
 \left(\Pi_{\mom}\right)_{jk}= {1\over \pp_\mom} \sum_{\overline{i}} C^{*\, \overline{i}}_{\mom,j} C^{\, \overline{i}}_{\mom,k}  \, -\,
@@ -1540,7 +1577,7 @@ where we use (\ref{keyrel}) twice.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \bibitem{amps}A. Almheiri, D. Marolf, J. Polchinski and J. Sully, Black Holes: Complementarity or Firewalls?, 1207.3123 
-\bibitem{hawking} S. Hawking, Particle Creation by Black Holes, Commun.Math.Phys. 43 (1975) 199Ð220
+\bibitem{hawking} S. Hawking, Particle Creation by Black Holes, Commun.Math.Phys. 43 (1975) 199--220
 \bibitem{unruh} W. Unruh, Notes on black hole evaporation, Phys.Rev. D14 (1976) 870
  \bibitem{bekenstein}   J.~D.~Bekenstein, ``Black holes and entropy,'' Phys.\ Rev.\ D {\bf 7}, 2333 (1973).
 \bibitem{hoofthologram}  G.~'t Hooft,  ``Dimensional reduction in quantum gravity,'' gr-qc/9310026.
@@ -1550,9 +1587,9 @@ hep-th/9711200; S. Gubser, I. Klebanov and A. Polyakov,  {\it Gauge Theory Corre
  Phys.Lett.B428 (1998) 105, 
 hep-th/9802109; E. Witten, {\it Anti-de Sitter Space and Holography},
 Adv.Theor.Math.Phys.2 (1998) 253, hep-th/9802150;
- \bibitem{susskindcompl} L. Susskind, L. Thorlacius and J. Uglum, The Stretched horizon and black hole complementarity, Phys.Rev. D48 (1993) 3743Ð3761, hep-th/9306069;
- Y. Kiem, H. L. Verlinde and E. P. Verlinde, Black hole horizons and complementarity, Phys.Rev. D52 (1995) 7053Ð7065, hep-th/9502074;
-D. A. Lowe, J. Polchinski, L. Susskind, L. Thorlacius and J. Uglum, Black hole complementarity versus locality, Phys.Rev. D52 (1995) 6997Ð7010, hep-th/9506138 
+ \bibitem{susskindcompl} L. Susskind, L. Thorlacius and J. Uglum, The Stretched horizon and black hole complementarity, Phys.Rev. D48 (1993) 3743--3761, hep-th/9306069;
+ Y. Kiem, H. L. Verlinde and E. P. Verlinde, Black hole horizons and complementarity, Phys.Rev. D52 (1995) 7053--7065, hep-th/9502074;
+D. A. Lowe, J. Polchinski, L. Susskind, L. Thorlacius and J. Uglum, Black hole complementarity versus locality, Phys.Rev. D52 (1995) 6997--7010, hep-th/9506138 
 \bibitem{followup}
 R. Bousso, Complementarity Is Not Enough, 1207.5192;
 S. D. Mathur and D. Turton, Comments on black holes I: The possibility of complementarity, 1208.2005;
@@ -1566,18 +1603,18 @@ The information paradox: conflicts and resolutions, 1201.2079.
 \bibitem{haydenpreskill} P. Hayden and J. Preskill, Black holes as mirrors: Quantum information in random subsystems, JHEP 0709 (2007) 120, 0708.4025
 \bibitem{avery}        S. G. Avery, Qubit Models of Black Hole Evaporation, 1109.2911
 \bibitem{giddings-qu-info} S. B. Giddings and Y. Shi, Quantum information transfer and models for black hole mechanics, 1205.4732
-\bibitem{page-subsystem}        D. N. Page, Average entropy of a subsystem, Phys.Rev.Lett. 71 (1993) 1291Ð1294, gr-qc/9305007
+\bibitem{page-subsystem}        D. N. Page, Average entropy of a subsystem, Phys.Rev.Lett. 71 (1993) 1291--1294, gr-qc/9305007
 \bibitem{page-bh-info}  D. N. Page, Black hole information, hep-th/9305040
 \bibitem{fastscrambler} Y. Sekino and L. Susskind, Fast Scramblers, JHEP 0810 (2008) 065, 0808.2096
 \bibitem{vanraamsdonk}  M. Van Raamsdonk, Comments on quantum gravity and entanglement, 0907.2939
 \bibitem{finalstate} G. T. Horowitz and J. M. Maldacena, The Black hole final state, JHEP 0402 (2004) 008, hep-th/0310281
 \bibitem{preskillgottesman}   D.~Gottesman and J.~Preskill, ``Comment on 'The Black hole final state',''  JHEP {\bf 0403}, 026 (2004)  [hep-th/0311269].
-\bibitem{zurek} W. H. Zurek, Entropy Evaporated by a Black Hole, Phys. Rev. Lett. 49 (Dec, 1982) 1683Ð1686
+\bibitem{zurek} W. H. Zurek, Entropy Evaporated by a Black Hole, Phys. Rev. Lett. 49 (Dec, 1982) 1683--1686
 \bibitem{quantuminformation}    M. A. Nielsen and I. L. Chuang, Quantum Computation and Quantum Information. Cambridge University Press, 2000
 \bibitem{preskilllectures} J. Preskill, Lectures on Quantum Information and Quantum Computation, http://www.theory.caltech.edu/$\sim$preskill/ph229/$\#$lecture
 \bibitem{jacobson}  T.~Jacobson, ``Thermodynamics of space-time: The Einstein equation of state,''
   Phys.\ Rev.\ Lett.\  {\bf 75}, 1260 (1995) [gr-qc/9504004]  
-\bibitem{mathur-fuzzball-review}        S. D. Mathur, The Fuzzball proposal for black holes: An Elementary review, Fortsch.Phys. 53 (2005) 793Ð827, hep-th/0502050
+\bibitem{mathur-fuzzball-review}        S. D. Mathur, The Fuzzball proposal for black holes: An Elementary review, Fortsch.Phys. 53 (2005) 793--827, hep-th/0502050
 
 
 \end{thebibliography}
