--- a/gr-qc-0111027v1/SLACversionTrentoproc.tex
+++ b/gr-qc-0111027v1/SLACversionTrentoproc.tex
@@ -7,12 +7,52 @@
 \newcommand{\bra}[1]{\langle  {#1}  \vert }
 \newcommand{\ket}[1]{\vert {#1} \rangle }
 
-\thispagestyle{empty} 
-\hoffset=-.4in
-\topmargin -0.15truein
-\setlength{\textheight}{8.5in}
-\setlength{\textwidth}{6in}
-\flushbottom
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+%\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+%\input{../helpers/cmrsum}
+%\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 %\parindent=1.5pc
 %\baselineskip=15pt
 
@@ -26,9 +66,9 @@ November 2001\\}
 \vfill
 
 \begin{center}
-{{\bf\LARGE Moving Mirrors, Black Holes, Hawking}
+{{\bf\Large Moving Mirrors, Black Holes, Hawking}
 \vskip 20pt
-{\bf\LARGE Radiation and
+{\bf\Large Radiation and
 All That $\ldots$}\footnote{Work supported by Department
 of Energy contract DE--AC03--76SF00515.}}
 
@@ -43,7 +83,7 @@ E-mail:  niv@slac.stanford.edu}
 \vfill
 
 \begin{center}
-{\bf\large
+{\bf
 Abstract }
 \end{center}
 
@@ -122,7 +162,7 @@ at $r=2M$, this coordinate singularity is not a problem.  The real
 issue is that in order to canonically quantize this theory we need a family of
 spacelike slices which foliate the spacetime.  Given this, we can then define 
 the field and its conjugate momentum on one of these slices.
-Inspection of the metric, Eq.\ref{schwarz}, shows that surfaces of constant
+Inspection of the metric, Eq.~\ref{schwarz}, shows that surfaces of constant
 Schwarzschild time change from spacelike to timelike at the horizon ($r=2M$)
 and so, they do not fulfill our requirements.  
 
@@ -168,7 +208,7 @@ In these coordinates the Schwarzschild metric becomes:
 \begin{equation}
  ds^2 = {32\,  e^{\vert -r \vert} dx\,dy \over r} + r^2 d\Omega^2
 \end{equation}
-Note that Eq.\ref{kruskaleq} immediately shows us that fixed Schwarzschild $r$ is a
+Note that Eq.~\ref{kruskaleq} immediately shows us that fixed Schwarzschild $r$ is a
 hyperbola in the $x,y$-plane, as shown in Fig.1, and that surfaces of fixed
 Schwarzschild time corresponds to straight lines $x=\vert y \vert\,e^{t_S}$ (which are not
 shown in Fig.1).
@@ -190,10 +230,10 @@ ds^2 = -(1 - {1 \over r}) \,d\lambda^2 + {2\,d\lambda\,dr \over \sqrt{r}} + dr^2
 \begin{figure}
 \begin{center}
 \leavevmode
-\vskip 1in
+\vskip 2in
 \epsfig{file=kruskalpainleve.ps,width=4.5in}
 \end{center}
-\vskip -1.75in
+\vskip -2in
 \caption[kruskaletc]{}
 \label{kruskal}
 \end{figure}
@@ -325,10 +365,10 @@ all come from very near the point $x = A$.
 \begin{figure}
 \begin{center}
 \leavevmode
-\vskip 1in
+\vskip 2in
 \epsfig{file=movingmirror.ps,width=4.5in}
 \end{center}
-\vskip -1.5in
+\vskip -2in
 \caption[movingmirror]{}
 \label{movingmirror}
 \end{figure}
