--- a/1803.04993/RS.tex
+++ b/1803.04993/RS.tex
@@ -12,28 +12,52 @@
 \fi
 %%%
 
-\usepackage[colorlinks=true
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
 ,citecolor=blue
 ,filecolor=blue
 ,linkcolor=blue
 ,menucolor=blue
-,linktocpage=true]{hyperref}
+,linktocpage=true}
 \hypersetup{
 bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-%\usepackage{amssymb}
-%\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl]{mathpazo}
-\linespread{1.1}
-%\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={7in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
-\tolerance=2000
-\usepackage[small]{titlesec}
 
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 %\parskip=\smallskip
 \def\Bbb{\mathbb}
@@ -125,7 +149,9 @@ Natural Sciences, Institute for Advanced Study}\break
 \abstract{ These are notes on some entanglement properties of quantum field theory, aiming to make accessible a variety of ideas
 that are known in the literature.  The main goal is to explain how to deal with entanglement when -- as in quantum field theory -- it is a property
 of the algebra of observables and not just of the states. }
-\date{January, 2018}
+
+\bigskip\noindent
+{6 Aug 2018}
 \end{titlepage}
 \def\Hom{\mathrm{Hom}}
 \def\H{{\mathcal H}}
