--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,30 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-27 08:11:07 -0400 
+%% Created for Pete Su at 2023-08-27 08:15:40 -0400
 
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
 
 
+
+@article{Zyczkowski2006a,
+	author = {Karol Zyczkowski and Ingemar Bengtsson},
+	date-added = {2023-08-27 08:15:19 -0400},
+	date-modified = {2023-08-27 08:15:40 -0400},
+	journal = {arXiv preprint},
+	note = {\href{http://arxiv.org/abs/quant-ph/0606228v1}{arxiv:quant-ph/0606228}},
+	title = {{An Introduction to Quantum Entanglement: a Geometric Approach}},
+	year = {2006}}
+
+@article{Yonekura2018,
+	author = {Kazuya Yonekura},
+	date-added = {2023-08-27 08:14:26 -0400},
+	date-modified = {2023-08-27 08:14:49 -0400},
+	journal = {arXiv preprint},
+	note = {\href{http://arxiv.org/abs/1807.05399v2}{arxiv:1807.05399}},
+	title = {{Black hole information and Reeh-Schlieder theorem}},
+	year = {2018}}
 
 @article{Witten2018,
 	author = {Edward Witten},
@@ -30,7 +48,7 @@
 	date-modified = {2023-08-27 08:09:46 -0400},
 	journal = {arXiv preprint},
 	note = {\href{http://arxiv.org/abs/hep-th/9802150v2}{arxiv:hep-th/9802150}},
-	title = {{ Anti De Sitter Space And Holography }},
+	title = {{Anti De Sitter Space And Holography}},
 	year = {1998}}
 
 @incollection{Wipf2003,
@@ -3865,14 +3883,6 @@
 	year = 1994,
 	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.49.6566},
 	bdsk-url-2 = {https://doi.org/10.1103/physrevd.49.6566}}
-
-@article{Zyczkowski2006,
-	author = {Zyczkowski, Karol and Bengtsson, Ingemar},
-	date-added = {2023-08-03 09:47:35 -0400},
-	date-modified = {2023-08-03 09:47:37 -0400},
-	journal = {arXiv preprint quant-ph/0606228},
-	title = {An introduction to quantum entanglement: a geometric approach},
-	year = {2006}}
 
 @article{Almheiri2013,
 	author = {Ahmed Almheiri and Donald Marolf and Joseph Polchinski and James Sully},
@@ -9406,19 +9416,6 @@
 	volume = {A90},
 	year = {2014},
 	bdsk-url-1 = {https://doi.org/10.1103/PhysRevA.90.042102}}
-
-@article{Yonekura2018,
-	archiveprefix = {arXiv},
-	author = {Yonekura, Kazuya},
-	date-added = {2019-07-05 22:18:51 -0400},
-	date-modified = {2023-08-21 08:42:33 -0400},
-	eprint = {1807.05399},
-	journal = {arXiv},
-	note = {\href{https://arxiv.org/abs/1807.05399}{arxiv:1807.05399}},
-	primaryclass = {hep-th},
-	slaccitation = {%%CITATION = ARXIV:1807.05399;%%},
-	title = {{Black hole information and Reeh-Schlieder theorem}},
-	year = {2018}}
 
 @article{Lindblad1976,
 	author = {Lindblad, G.},
