bib 841, black holes really done

--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,59 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-27 08:15:40 -0400
+%% Created for Pete Su at 2023-08-27 08:36:37 -0400 
 
 
-%% Saved with string encoding Unicode (UTF-8)
+%% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@incollection{Wallace2020,
+	author = {David Wallace},
+	booktitle = {Beyond Spacetime},
+	date-added = {2023-08-27 08:36:06 -0400},
+	date-modified = {2023-08-27 08:36:37 -0400},
+	doi = {10.1017/9781108655705.013},
+	note = {{\href{http://arxiv.org/abs/1710.03783v2}{arxiv:1710.03783}}},
+	pages = {209--236},
+	publisher = {Cambridge University Press},
+	title = {Why Black Hole Information Loss Is Paradoxical},
+	url = {https://doi.org/10.1017%2F9781108655705.013},
+	year = 2020,
+	bdsk-url-1 = {https://doi.org/10.1017%2F9781108655705.013},
+	bdsk-url-2 = {https://doi.org/10.1017/9781108655705.013}}
+
+@article{Wallace2019,
+	author = {David Wallace},
+	date-added = {2023-08-27 08:35:21 -0400},
+	date-modified = {2023-08-27 08:35:38 -0400},
+	doi = {10.1016/j.shpsb.2018.10.006},
+	journal = {Studies in History and Philosophy of Science Part B: Studies in History and Philosophy of Modern Physics},
+	note = {{\href{http://arxiv.org/abs/1710.02725v2}{arxiv:1710.02725}}},
+	pages = {103--117},
+	publisher = {Elsevier {BV}},
+	title = {The case for black hole thermodynamics part {II}: Statistical mechanics},
+	url = {https://doi.org/10.1016%2Fj.shpsb.2018.10.006},
+	volume = {66},
+	year = 2019,
+	bdsk-url-1 = {https://doi.org/10.1016%2Fj.shpsb.2018.10.006},
+	bdsk-url-2 = {https://doi.org/10.1016/j.shpsb.2018.10.006}}
+
+@article{Wallace2018,
+	author = {David Wallace},
+	date-added = {2023-08-27 08:34:32 -0400},
+	date-modified = {2023-08-27 08:34:48 -0400},
+	doi = {10.1016/j.shpsb.2018.05.002},
+	journal = {Studies in History and Philosophy of Science Part B: Studies in History and Philosophy of Modern Physics},
+	note = {{\href{http://arxiv.org/abs/1710.02724v2}{arxiv:1710.02724}}},
+	pages = {52--67},
+	publisher = {Elsevier {BV}},
+	title = {The case for black hole thermodynamics part I: Phenomenological thermodynamics},
+	url = {https://doi.org/10.1016%2Fj.shpsb.2018.05.002},
+	volume = {64},
+	year = 2018,
+	bdsk-url-1 = {https://doi.org/10.1016%2Fj.shpsb.2018.05.002},
+	bdsk-url-2 = {https://doi.org/10.1016/j.shpsb.2018.05.002}}
 
 @article{Zyczkowski2006a,
 	author = {Karol Zyczkowski and Ingemar Bengtsson},
