--- a/1710.02724/1710.02724.tex
+++ b/1710.02724/1710.02724.tex
@@ -40,6 +40,8 @@ bookmarksopenlevel=10
 % make sure there is enough TOC for reasonable pdf bookmarks.
 \setcounter{tocdepth}{3}
 
+\date{13 Jun 2018}
+
 %\usepackage[dotinlabels]{titletoc}
 %\titlelabel{{\thetitle}.\quad}
 %\input{../helpers/psu-plain-titles.tex}
