--- a/1710.02724/1710.02724.tex
+++ b/1710.02724/1710.02724.tex
@@ -632,6 +632,8 @@ I am grateful to Harvey Brown, Craig Callender, Sean Carroll, Neil Dewar, Eleano
 
 \begin{thebibliography}{}
 
+\raggedright
+
 \bibitem[\protect\citeauthoryear{Abbott and Collaboration)}{Abbott and
   Collaboration)}{2016}]{ligo2016}
 Abbott, B. e. L. S.~C. and V.~Collaboration) (2016).
