--- a/1710.03783/1710.03783.tex
+++ b/1710.03783/1710.03783.tex
@@ -1,10 +1,58 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 \usepackage{chicago}
 \usepackage{amssymb}
 \usepackage{tikz}
 \usetikzlibrary{decorations.pathmorphing}
 
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
+\date{13 Jun 2018}
 
 \newcommand{\AdS}{\mbox{AdS}}
 \newcommand{\ie}{\mbox{i.\,e.\,\ }}
@@ -95,6 +143,8 @@
 \begin{abstract}
 I distinguish between two versions of the black hole information-loss paradox. The first arises from apparent failure of unitarity on the spacetime of a completely evaporating black hole, which appears to be non-globally-hyperbolic; this is the most commonly discussed version of the paradox in the foundational and semipopular literature, and the case for calling it `paradoxical' is less than compelling. But the second arises from a clash between a fully-statistical-mechanical interpretation of black hole evaporation and the quantum-field-theoretic description used in derivations of the Hawking effect. This version of the paradox arises long before a black hole completely evaporates, seems to be the version that has played a central role in quantum gravity, and is genuinely paradoxical. After explicating the paradox, I discuss the implications of more recent work on AdS/CFT duality and on the `Firewall paradox', and conclude that the paradox is if anything now sharper. The article is written at a (relatively) introductory level and does not assume advanced knowledge of quantum gravity.
 \end{abstract}
+
+\newpage
 
 \section{Introduction}
 
@@ -453,6 +503,8 @@ I am grateful to Gordon Belot, Sean Carroll, Erik Curiel, Eleanor Knox, James La
 %\bibliographystyle{chicago}
 
 \begin{thebibliography}{}
+
+\raggedright
 
 \bibitem[\protect\citeauthoryear{Aharony, Gubser, Maldacena, Ooguri, and
   Oz}{Aharony et~al.}{1999}]{aharonyadscftreview}
