--- a/1710.02724/1710.02724.tex
+++ b/1710.02724/1710.02724.tex
@@ -516,7 +516,7 @@ exactly as would be predicted from a naive treatment of radiation as carrying aw
 
 To understand evaporation closer to the black hole, we need to go beyond the fully classical Einstein equation, as quantum-mechanical effects become relevant. The normal tool to investigate this is \emph{semiclassical gravity}, in which the classical metric is coupled by the Einstein field equations to the renormalised value of the quantum expectation value of the stress-energy tensor (possibly including first-order gravitational perturbations as an additional graviton field). That is, a solution of semiclassical gravity requires both a metric $g$ and a (Heisenberg) quantum state $\ket{\psi}$ such that
 \be
-G[g] = 8 \pi G \matel{\psi}{T[\op{\phi}]}{\psi}_{ren}
+G[g] = 8 \pi G \matel{\psi}{T[\op{\phi}]}{\psi}_{\mathrm{ren}}
 \ee
 where $\op{\phi}$ schematically denotes the various quantum fields, $G$ is the Einstein tensor associated with $g$, and the `ren' subscript indicates that we need to renormalise the stress-energy tensor.
 
