--- a/1710.02724/1710.02724.tex
+++ b/1710.02724/1710.02724.tex
@@ -18,7 +18,7 @@
 \titlelabel{\thetitle.\quad}
 
 \usepackage{cite}
-\usepackage{microtype}
+%\usepackage{microtype}
 
 % hyperref last because otherwise some things go wrong.
 \usepackage{hyperref}
