--- a/1710.02724/1710.02724.tex
+++ b/1710.02724/1710.02724.tex
@@ -3,7 +3,8 @@
 \usepackage{amssymb}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl,sc]{mathpazo}
+%\usepackage[noBBpl,sc]{mathpazo}
+\usepackage{newpxtext,newpxmath}
 \usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.1}
 \sloppy
