--- a/1710.02724/1710.02724.tex
+++ b/1710.02724/1710.02724.tex
@@ -449,7 +449,7 @@ and where $r$ is given implicitly in terms of $r_*$ by (\ref{tortoise}).
 
 Formally (\ref{scatteringproblem}) is just the nonrelativistic Schr\"{o}dinger equation in one dimension, so that the problem of solving the Klein-Gordon equation has been reduced to a scattering problem in one dimension.  Modes can be thought of as incoming either from infinity or from the event horizon, and they will scatter off, or tunnel through, a potential barrier whose form depends on the angular momentum $l$. For $l\gg 1$ the barrier has height $\sim l^2$ and is located at $r=3/2$.  
 
-We can now distinguish (following \cite[ch.VIII]{membraneparadigm}):
+We can now distinguish (following \citeN[page 291]{membraneparadigm}):
 \begin{itemize}
 \item IN modes, which come in from infinity and largely scatter off the angular-momentum barrier (for $l\gg 1$) with some small amplitude to penetrate the barrier and fall onto the event horizon;
 \item UP modes, which come up from the vicinity of the event horizon and are largely trapped close to the horizon by the angular-momentum barrier (for $l\gg 1$) with some small amplitude to escape to infinity.
